[gd_scene load_steps=10 format=2]

[ext_resource path="res://gameplay/drum_visual.gd" type="Script" id=1]
[ext_resource path="res://skins/test_skin/combobreak.wav" type="AudioStream" id=2]
[ext_resource path="res://skins/test_skin/taiko-bar-left.png" type="Texture" id=3]
[ext_resource path="res://skins/test_skin/taiko-drum-hitclap.wav" type="AudioStream" id=4]
[ext_resource path="res://skins/test_skin/taiko-drum-hitfinish.wav" type="AudioStream" id=5]
[ext_resource path="res://skins/test_skin/taiko-drum-hitnormal.wav" type="AudioStream" id=6]
[ext_resource path="res://skins/test_skin/taiko-drum-hitwhistle.wav" type="AudioStream" id=7]
[ext_resource path="res://skins/test_skin/taiko-drum-inner.png" type="Texture" id=8]
[ext_resource path="res://skins/test_skin/taiko-drum-outer.png" type="Texture" id=9]

[node name="DrumVisual" type="TextureRect"]
margin_top = 4.0
margin_right = 254.0
margin_bottom = 282.0
texture = ExtResource( 3 )
expand = true
script = ExtResource( 1 )

[node name="ComboBreakAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SFX"

[node name="FinisherDonAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 5.0
bus = "SFX"

[node name="FinisherKatAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 5.0
bus = "SFX"

[node name="LeftDonAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[node name="LeftKatAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="RightDonAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[node name="RightKatAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="LeftDon" type="TextureRect" parent="."]
anchor_right = 0.5
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true

[node name="LeftKat" type="TextureRect" parent="."]
anchor_right = 0.5
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true
flip_h = true

[node name="RightDon" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true
flip_h = true

[node name="RightKat" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true

[node name="Combo" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme_type_variation = "Combo"
align = 1
valign = 1
